# ribbon-cdr-parser

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/ribbon_cdr_parser/: Ribbon_SBC_CDR_parser.py  __main__.py  cdr_field_mappings.py
src/ribbon_cdr_parser.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_mappings_alignment.py  test_parser_smoke.py
